add some words to html

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -5,7 +5,7 @@
     <title>try: /wl?path=dictionary.txt&begin_input=code&end_input=data</title>
 </head>
 <body>
-<h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
+<h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]], we are using travis to auto-build!</h1>
 <form th:action="@{/logout}" method="post">
     <input type="submit" value="Sign Out"/>
 </form>
